# flappycheems

./: Cargo.toml  README.md
src/: config.rs  error.rs  lib.rs  main.rs
src/environment/: mod.rs  obstacle.rs
src/game/: game_mode.rs  menu.rs  mod.rs  state.rs  transitions.rs
src/player/: mod.rs  player.rs  player_entity.rs
